frontend: Group Array Type (#976)
The group definition's name can be used in expressions (within group
annotations) to access the matched instructions / operations at runtime.
In addition it exposes a `length` and `bitLength` field.

```vadl
VLIW.length // number of instructions in the group
VLIW.bitLength // number of bits in the group

VLIW(1) // the second instruction in the group
VLIW(VLIW.length - 1) // the last instruction in the group
```

This introduces a 'GroupType' for such group references. Since we're able
to upper-bound the `length` and `bitLength`, we can also give these
properties a `UIntType` type with some maximal width.